--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -55,6 +55,7 @@
     "axios": "^0.25.0",
     "date-fns": "^2.28.0",
     "dripsy": "^3.0.0",
+    "eas-cli": "^0.48.1",
     "expo": "^43.0.0",
     "expo-app-loading": "~1.2.1",
     "expo-application": "~4.0.0",
@@ -68,6 +69,7 @@
     "expo-haptics": "~11.0.3",
     "expo-linear-gradient": "~10.0.3",
     "expo-linking": "~2.4.2",
+    "expo-localization": "~11.0.0",
     "expo-modules-core": "~0.4.4",
     "expo-next-react-navigation": "^2.0.2",
     "expo-notifications": "~0.13.3",
@@ -77,6 +79,7 @@
     "expo-updates": "~0.10.13",
     "expo-vector-icons": "^10.0.1",
     "flipper-plugin-performance": "^2.0.0",
+    "i18n-js": "^3.8.0",
     "isomorphic-fetch": "^3.0.0",
     "lottie-react-native": "^5.0.1",
     "main": "index.js",
@@ -126,6 +129,7 @@
     "@parcel/transformer-react-refresh-wrap": "^2.3.2",
     "@types/axios": "^0.14.0",
     "@types/date-fns": "^2.6.0",
+    "@types/i18n-js": "^3.8.2",
     "@types/isomorphic-fetch": "^0.0.35",
     "@types/numeral": "^2.0.2",
     "@types/react": "~17.0.21",
