--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -55,6 +55,7 @@
     "axios": "^0.25.0",
     "date-fns": "^2.28.0",
     "dripsy": "^3.0.0",
+    "esbuild": "^0.14.27",
     "expo": "^44.0.0",
     "expo-ads-admob": "~12.0.0",
     "expo-app-loading": "~1.3.0",
@@ -117,8 +118,7 @@
     "redux-persist": "^6.0.0",
     "reselect": "^4.1.5",
     "reselect-debugger-flipper": "^1.1.2",
-    "sentry-expo": "^4.0.0",
-    "metro-minify-esbuild": "^0.1.0"
+    "sentry-expo": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -140,6 +140,7 @@
     "@types/reselect": "^2.2.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "eas-cli": "^0.47.0",
+    "metro-minify-esbuild": "^0.1.0",
     "next-compose-plugins": "^2.2.1",
     "parcel": "^2.3.2",
     "typescript": "~4.3.5"
