--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -78,6 +78,7 @@
     "expo-status-bar": "~1.2.0",
     "expo-task-manager": "~10.1.0",
     "expo-vector-icons": "^10.0.1",
+    "fast-html-parser": "^1.0.1",
     "flipper-plugin-performance": "^2.0.0",
     "i18n-js": "^3.8.0",
     "isomorphic-fetch": "^3.0.0",
@@ -101,6 +102,7 @@
     "react-native-performance-flipper-reporter": "^2.0.0",
     "react-native-reanimated": "~2.3.1",
     "react-native-redash": "^16.2.3",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-shared-element": "0.8.3",
@@ -109,6 +111,7 @@
     "react-native-swiper-flatlist": "^3.0.16",
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.1",
+    "react-native-webview": "^11.17.2",
     "react-navigation-shared-element": "^3.1.3",
     "react-redux": "^7.2.6",
     "react-use": "^17.3.2",
