--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -53,6 +53,7 @@
     "@sentry/react-native": "^3.3.2",
     "app": "*",
     "axios": "^0.25.0",
+    "babel-plugin-inline-dotenv": "^1.6.0",
     "date-fns": "^2.28.0",
     "dripsy": "^3.0.0",
     "esbuild": "^0.14.27",
@@ -96,6 +97,8 @@
     "react-native-flipper": "^0.138.0",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-image-viewing": "^0.2.1",
+    "react-native-mmkv": "^1.6.2",
+    "react-native-mmkv-flipper-plugin": "^1.0.0",
     "react-native-multi-selectbox": "^1.5.0",
     "react-native-pager-view": "5.4.9",
     "react-native-performance": "^2.1.0",
@@ -140,6 +143,7 @@
     "@types/react-redux": "^7.1.22",
     "@types/redux-persist": "^4.3.1",
     "@types/reselect": "^2.2.0",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "eas-cli": "^0.47.0",
     "metro-minify-esbuild": "^0.1.0",
