--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -42,6 +42,7 @@
     "@parcel/transformer-typescript-tsc": "^2.3.2",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/netinfo": "7.1.3",
+    "@react-native-masked-view/masked-view": "^0.2.6",
     "@react-native-picker/picker": "2.2.1",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/devtools": "^6.0.5",
@@ -61,6 +62,7 @@
     "expo-ads-admob": "~12.0.0",
     "expo-app-loading": "~1.3.0",
     "expo-application": "~4.0.1",
+    "expo-auth-session": "~3.5.0",
     "expo-background-fetch": "~10.1.0",
     "expo-blur": "~11.0.0",
     "expo-community-flipper": "^44.0.1",
@@ -75,6 +77,7 @@
     "expo-modules-core": "~0.6.4",
     "expo-next-react-navigation": "^2.0.2",
     "expo-notifications": "~0.14.0",
+    "expo-random": "~12.1.1",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
     "expo-task-manager": "~10.1.0",
@@ -94,6 +97,7 @@
     "react-native": "0.64.3",
     "react-native-awesome-gallery": "^0.2.6",
     "react-native-element-dropdown": "^1.7.1",
+    "react-native-fast-image": "^8.5.11",
     "react-native-flipper": "^0.138.0",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-image-viewing": "^0.2.1",
@@ -143,9 +147,15 @@
     "@types/react-redux": "^7.1.22",
     "@types/redux-persist": "^4.3.1",
     "@types/reselect": "^2.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "babel-eslint": "^10.1.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "eas-cli": "^0.47.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "expo-module-scripts": "^2.0.0",
     "metro-minify-esbuild": "^0.1.0",
     "next-compose-plugins": "^2.2.1",
     "parcel": "^2.3.2",
