--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -10,8 +10,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/bundle-analyzer": "^11.1.2",
     "@expo/next-adapter": "^3.1.20",
+    "@next/bundle-analyzer": "^11.1.2",
     "app": "*",
     "native-base": "^3.3.4",
     "next": "^12.1.0",
@@ -23,10 +23,11 @@
     "setimmediate": "^1.0.5"
   },
   "devDependencies": {
+    "@types/node": "17.0.21",
+    "eslint-config-next": "^12.1.0",
     "next-compose-plugins": "^2.2.1",
     "next-transpile-modules": "^9.0.0",
-    "@types/node": "17.0.21",
-    "eslint-config-next": "^12.1.0"
+    "prettier": "^2.6.0"
   },
   "private": true,
   "version": "1.0.0",
