--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -46,6 +46,7 @@
     "@react-native-picker/picker": "2.2.1",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/devtools": "^6.0.5",
+    "@react-navigation/drawer": "^6.3.1",
     "@react-navigation/material-top-tabs": "^6.1.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.4.0",
