--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -120,6 +120,7 @@
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.1",
     "react-native-webview": "^11.17.2",
+    "react-navigation-collapsible": "^6.3.0",
     "react-navigation-shared-element": "^3.1.3",
     "react-redux": "^7.2.6",
     "react-use": "^17.3.2",
