--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -109,6 +109,7 @@
     "react-native-pager-view": "5.4.9",
     "react-native-performance": "^2.1.0",
     "react-native-performance-flipper-reporter": "^2.0.0",
+    "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~2.3.1",
     "react-native-redash": "^16.2.3",
     "react-native-render-html": "^6.3.4",
