--- a/packages/expo/eas.json
+++ b/packages/expo/eas.json
@@ -20,7 +20,8 @@
       "developmentClient": true,
       "distribution": "internal",
       "env": {
-        "STAGE": "development"
+        "STAGE": "development",
+        "MMKV": "false"
       }
     }
   },
@@ -28,4 +29,3 @@
     "version": ">= 0.42.4"
   }
 }
- 
