--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -53,6 +53,7 @@
     "@react-navigation/stack": "^6.1.1",
     "@reduxjs/toolkit": "^1.7.1",
     "@sentry/react-native": "^3.3.2",
+    "@stream-io/flat-list-mvcp": "^0.10.1",
     "app": "*",
     "axios": "^0.25.0",
     "babel-plugin-inline-dotenv": "^1.6.0",
@@ -98,6 +99,7 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-awesome-gallery": "^0.2.6",
+    "react-native-bidirectional-infinite-scroll": "^0.3.3",
     "react-native-element-dropdown": "^1.7.1",
     "react-native-fast-image": "^8.5.11",
     "react-native-flipper": "^0.138.0",
