--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -86,6 +86,7 @@
     "expo-task-manager": "~10.1.0",
     "expo-updates": "~0.11.6",
     "expo-vector-icons": "^10.0.1",
+    "expo-web-browser": "~10.1.0",
     "fast-html-parser": "^1.0.1",
     "flipper-plugin-performance": "^2.0.0",
     "i18n-js": "^3.8.0",
