--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -72,6 +72,7 @@
     "expo-dev-client": "~0.8.4",
     "expo-device": "~4.1.0",
     "expo-font": "~10.0.4",
+    "expo-google-sign-in": "~10.1.0",
     "expo-haptics": "~11.1.0",
     "expo-linear-gradient": "~11.0.3",
     "expo-linking": "~3.0.0",
@@ -126,7 +127,7 @@
     "react-native-swiper-flatlist": "^3.0.16",
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.1",
-    "react-native-webview": "^11.17.2",
+    "react-native-webview": "11.15.0",
     "react-navigation-collapsible": "^6.3.0",
     "react-navigation-shared-element": "^3.1.3",
     "react-redux": "^7.2.6",
