--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -133,6 +133,7 @@
     "react-navigation-shared-element": "^3.1.3",
     "react-redux": "^7.2.6",
     "react-use": "^17.3.2",
+    "recyclerlistview": "^3.0.5",
     "redux-devtools-extension": "^2.13.9",
     "redux-flipper": "^2.0.1",
     "redux-persist": "^6.0.0",
