--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -52,7 +52,7 @@
     "@react-navigation/native-stack": "^6.4.0",
     "@react-navigation/stack": "^6.1.1",
     "@reduxjs/toolkit": "^1.7.1",
-    "@sentry/react-native": "^3.3.2",
+    "@sentry/react-native": "^3.2.13",
     "@stream-io/flat-list-mvcp": "^0.10.1",
     "app": "*",
     "axios": "^0.25.0",
@@ -87,6 +87,7 @@
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
     "expo-task-manager": "~10.1.0",
+    "expo-updates": "^0.11.6",
     "expo-vector-icons": "^10.0.1",
     "expo-web-browser": "~10.1.0",
     "fast-html-parser": "^1.0.1",
@@ -137,7 +138,7 @@
     "redux-persist": "^6.0.0",
     "reselect": "^4.1.5",
     "reselect-debugger-flipper": "^1.1.2",
-    "sentry-expo": "^4.0.0"
+    "sentry-expo": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -153,7 +154,7 @@
     "@types/isomorphic-fetch": "^0.0.35",
     "@types/numeral": "^2.0.2",
     "@types/react": "~17.0.21",
-    "@types/react-native": "~0.64.12",
+    "@types/react-native": "~0.64.3",
     "@types/react-redux": "^7.1.22",
     "@types/redux-persist": "^4.3.1",
     "@types/reselect": "^2.2.0",
@@ -162,7 +163,7 @@
     "babel-eslint": "^10.1.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "babel-plugin-transform-remove-console": "^6.9.4",
-    "eas-cli": "^0.47.0",
+    "eas-cli": "^0.52.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "expo-module-scripts": "^2.0.0",
