--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "private": true,
   "license": "MIT",
   "devDependencies": {
-    "@types/react": "^17.0.39",
     "eslint": "^8.11.0",
     "patch-package": "^6.4.7",
     "turbo": "^1.1.6",
-    "typescript": "^4.6.2"
+    "typescript": "~4.3.5"
   },
   "workspaces": [
     "packages/app",
