--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -103,6 +103,7 @@
     "react-dom": "17.0.1",
     "react-freeze": "^1.0.0",
     "react-native": "0.64.3",
+    "react-native-auto-height-image": "^3.2.4",
     "react-native-awesome-gallery": "^0.2.6",
     "react-native-bidirectional-infinite-scroll": "^0.3.3",
     "react-native-element-dropdown": "^1.7.1",
@@ -134,6 +135,7 @@
     "react-navigation-shared-element": "^3.1.3",
     "react-redux": "^7.2.6",
     "react-use": "^17.3.2",
+    "recyclerlistview": "^3.0.5",
     "redux-devtools-extension": "^2.13.9",
     "redux-flipper": "^2.0.1",
     "redux-persist": "^6.0.0",
