--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -28,9 +28,7 @@
     "build:preview:android": "STAGE=staging eas build --profile preview --platform android",
     "build:production": "STAGE=production eas build --profile production --platform all",
     "build:production:ios": "STAGE=production eas build --profile production --platform ios",
-    "build:production:android": "STAGE=production eas build --profile production --platform android",
-    "web": "parcel public/index.html",
-    "build": "parcel build index.web.js"
+    "build:production:android": "STAGE=production eas build --profile production --platform android"
   },
   "dependencies": {
     "@babel/helper-environment-visitor": "^7.16.7",
@@ -38,8 +36,6 @@
     "@expo-google-fonts/quicksand": "^0.2.2",
     "@gorhom/bottom-sheet": "^4.1.3",
     "@motify/interactions": "^0.17.1",
-    "@parcel/transformer-raw": "^2.3.2",
-    "@parcel/transformer-typescript-tsc": "^2.3.2",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/netinfo": "7.1.3",
     "@react-native-masked-view/masked-view": "0.2.6",
@@ -147,10 +143,6 @@
     "@babel/core": "^7.12.9",
     "@expo/next-adapter": "^3.1.0",
     "@expo/webpack-config": "~0.16.2",
-    "@parcel/babel-plugin-transform-runtime": "^2.3.2",
-    "@parcel/config-default": "^2.3.2",
-    "@parcel/core": "^2.3.2",
-    "@parcel/transformer-react-refresh-wrap": "^2.3.2",
     "@types/axios": "^0.14.0",
     "@types/date-fns": "^2.6.0",
     "@types/i18n-js": "^3.8.2",
@@ -172,7 +164,6 @@
     "expo-module-scripts": "^2.0.0",
     "metro-minify-esbuild": "^0.1.0",
     "next-compose-plugins": "^2.2.1",
-    "parcel": "^2.3.2",
     "typescript": "~4.3.5"
   },
   "private": true,
